kubernetes/stack-io/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stack-io
  namespace: stack-io
  labels:
    app: stack-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stack-io
  template:
    metadata:
      labels:
        app: stack-io
    spec:
      serviceAccountName: stack-io
      securityContext:
        fsGroup: 999
        runAsUser: 999
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
      containers:
      ## Uncomment this to create a busybox container 
      ## to debug the pod with all the volumes mounted
      # - name: debug
      #   image: busybox
      #   command: ['sh', '-c', 'sleep infinity']
      #   volumeMounts:
      #   - name: logs
      #     mountPath: /var/logs
      #   - name: hooks
      #     mountPath: /app/hooks
      #   resources:
      #     requests:
      #       cpu: "100m"
      #       memory: "100Mi"
      #     limits:
      #       cpu: "500m"
      #       memory: "500Mi"
      - name: webserver
        image: grgouveia/stack-io:latest
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: logs
          mountPath: /var/logs/webserver
        - name: stack-io
          mountPath: /app/server.confi
          subPath: server.confi # Using subPath to mount a single file from a volume
        - name: hooks
          mountPath: /app/hooks
        lifecycle:
          postStart:
            # httpGet:
            #   path: /post-start-hook
            #   port: 8080
            exec:
              command: ["/bin/sh","-c", "/app/hooks/post-start-hook.sh"]
          preStop:
            exec:
              command: ["/bin/sh","-c", "/app/hooks/pre-stop-hook.sh"]
      volumes:
      - name: logs
        persistentVolumeClaim:
          claimName: stack-io-logs-pvc
      - name: stack-io
        secret:
          secretName: stack-io-db-secret
          items:
          - key: server.confi
            path: server.confi
      - name: hooks-configmap
        configMap:
          name: stack-io-hooks-configmap
      - name: scripts-configmap
        configMap:
          name: stack-io-scripts-configmap
      - name: hooks
        emptyDir: {}
