kubernetes/stack-io/manifests/network-policy.yaml
# Default deny all ingress and egress traffic
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: stack-io
  name: stack-io-default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# Allow traffic from the same namespace from pods with the specified labels
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: stack-io
  name: stack-io-allow-traffic
spec:
  podSelector:
    matchLabels:
      app: stack-io
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stack-io
    - podSelector:
        matchLabels:
          app: nginx
